Major rewrite of UnitCompiler and CodeContext to implement the generation of the StackMapTable attribute.